manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskapp
  labels:
    name: taskapp
    environment: production
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
