manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskapp-backend
  namespace: taskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskapp-backend
  template:
    metadata:
      labels:
        app: taskapp-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-10-10-10-8
      containers:
        - name: backend
          image: ghcr.io/lasglowtech/taskapp-backend:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: taskapp-backend
  namespace: taskapp
spec:
  selector:
    app: taskapp-backend
  ports:
    - port: 5000
      targetPort: 5000
