manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskapp-frontend
  namespace: taskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskapp-frontend
  template:
    metadata:
      labels:
        app: taskapp-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-10-10-10-8
      containers:
        - name: frontend
          image: ghcr.io/lasglowtech/taskapp-frontend:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: taskapp-frontend
  namespace: taskapp
spec:
  selector:
    app: taskapp-frontend
  ports:
    - port: 80
      targetPort: 80
